fix submit button alignment

--- a/public/style.css
+++ b/public/style.css
@@ -9,3 +9,7 @@ li {
 .form-heading {
  color: #424242;
 }
+
+.form-button {
+  margin: 50px;
+}
